--- a/views/petition.handlebars
+++ b/views/petition.handlebars
@@ -11,5 +11,8 @@
         <label for="signature">Your Signature</label>
         <input id="signature" type="hidden" name="signature" />
     </div>
-    <canvas></canvas>
+    <div id="canvas-container">
+        <canvas id="signature-canvas"></canvas>
+        <button id="clear-button" type="button">clear</button>
+    </div>
 </form>
