--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -12,5 +12,8 @@
             {{{body}}}
         </main>
     </body>
+    <script
+        src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"
+    ></script>
     <script src="/script.js"></script>
 </html>
