connecting to db

--- a/views/petition.handlebars
+++ b/views/petition.handlebars
@@ -15,4 +15,5 @@
         <canvas id="signature-canvas"></canvas>
         <button id="clear-button" type="button">clear</button>
     </div>
+    <button id="submit-button">Submit</button>
 </form>
