ugly but fully functional

--- a/views/petition.handlebars
+++ b/views/petition.handlebars
@@ -1,15 +1,15 @@
-<form method="POST">
+<form id="petition-form" method="POST" onsubmit="">
     <div id="first-container">
         <label for="first">First Name</label>
-        <input id="first" type="text" name="first" />
+        <input id="first" type="text" name="first" required />
     </div>
     <div id="last-container">
         <label for="last">Last Name</label>
-        <input id="last" type="text" name="last" />
+        <input id="last" type="text" name="last" required />
     </div>
     <div id="signature-container">
         <label for="signature">Your Signature</label>
-        <input id="signature" type="hidden" name="signature" />
+        <input id="signature" type="hidden" name="signature" required />
     </div>
     <div id="canvas-container">
         <canvas id="signature-canvas"></canvas>
