added total count on thank-you page

--- a/views/thanks.handlebars
+++ b/views/thanks.handlebars
@@ -1,4 +1,7 @@
 <div>
     <h1>Thank you!</h1>
+    <p>A total of
+        <strong>{{count}}</strong>
+        people have signed this petition.</p>
     <p>Check out all the people who've signed <a href="/signers">here</a>.</p>
 </div>
