--- a/views/petition.handlebars
+++ b/views/petition.handlebars
@@ -1,3 +1,4 @@
+<h1>We want Half-Life λ&sup3; now!</h1>
 <form id="petition-form" method="POST" onsubmit="">
     <div id="first-container">
         <label for="first">First Name</label>
@@ -15,5 +16,6 @@
         <canvas id="signature-canvas"></canvas>
         <button id="clear-button" type="button">clear</button>
     </div>
-    <button id="submit-button">Submit</button>
 </form>
+
+<button id="submit-button" form="petition-form">Submit</button>
