--- a/views/signers.handlebars
+++ b/views/signers.handlebars
@@ -1,7 +1,9 @@
 <div id="signers">
-    <ol>
+    <ul>
         {{#each signers}}
             <li>{{this.first}} {{this.last}}</li>
         {{/each}}
-    </ol>
+        <li id="crowbar">Here's a Crowbar</li>
+    </ul>
+    <h3>Thank you!</h3>
 </div>
