--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,10 +4,14 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Half-Life λ&sup3; Petition</title>
+        <link
+            rel="stylesheet"
+            href="https://fonts.googleapis.com/css?family=Special+Elite"
+        />
         <link rel="stylesheet" href="/style.css" />
     </head>
     <body>
-        <h1>We want Half-Life λ&sup3; now!</h1>
+        <img id="gordon" />
         <main>
             {{{body}}}
         </main>
@@ -15,5 +19,7 @@
     <script
         src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"
     ></script>
-    <script src="/script.js"></script>
+    <script src="/canvas.js"></script>
+    <script src="/form.js"></script>
+    <script src="/signersTicker.js"></script>
 </html>
