--- a/views/thanks.handlebars
+++ b/views/thanks.handlebars
@@ -4,4 +4,7 @@
         <strong>{{count}}</strong>
         people have signed this petition.</p>
     <p>Check out all the people who've signed <a href="/signers">here</a>.</p>
+    <div id="user-signature">
+        <img src={{img}} />
+    </div>
 </div>
