--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -19,6 +19,6 @@
     <script
         src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"
     ></script>
-    <script src="/canvas.js"></script>
+    <script src="/petition.js"></script>
     <script src="/signersTicker.js"></script>
 </html>
