--- a/public/style.css
+++ b/public/style.css
@@ -3,7 +3,7 @@ body {
     box-sizing: border-box;
     height: 100vh;
     background-color: orange;
-    background-image: url("./assets/wallpaperflare.com_wallpaper.jpg");
+    background-image: url("./assets/city17.jpg");
     background-size: cover;
     font-family: "Special Elite", serif;
 }
@@ -14,7 +14,7 @@ h1 {
 }
 
 #gordon {
-    content: url("/assets/Gordon_freeman-removebg-preview.png");
+    content: url("/assets/gordon.png");
     position: absolute;
     width: 200px;
     height: 200px;
@@ -58,6 +58,9 @@ input {
 
 input {
     width: 150px;
+    background-color: rgba(255, 255, 255, 0.356);
+    color: white;
+    outline: none;
 }
 
 #signature-container {
@@ -69,10 +72,17 @@ input {
     flex-direction: column;
 }
 
-canvas {
+#signature-canvas {
     background-color: rgba(255, 255, 255, 0.356);
     border-radius: 20px;
     cursor: url("./assets/pen.cur"), auto;
+    border-color: rgba(0, 0, 0, 0);
+    border-style: solid;
+}
+
+.required {
+    border-color: rgba(255, 117, 4, 1) !important;
+    border-style: solid;
 }
 
 #clear-button {
