--- a/views/petition.handlebars
+++ b/views/petition.handlebars
@@ -2,20 +2,21 @@
 <form id="petition-form" method="POST" onsubmit="">
     <div id="first-container">
         <label for="first">First Name</label>
-        <input id="first" type="text" name="first" required />
+        <input id="first" type="text" name="first" />
     </div>
     <div id="last-container">
         <label for="last">Last Name</label>
-        <input id="last" type="text" name="last" required />
+        <input id="last" type="text" name="last" />
     </div>
     <div id="signature-container">
         <label for="signature">Your Signature</label>
-        <input id="signature" type="hidden" name="signature" required />
+        <input id="signature" type="hidden" name="signature" />
     </div>
     <div id="canvas-container">
         <canvas id="signature-canvas"></canvas>
         <button id="clear-button" type="button">clear</button>
     </div>
+    <input type="hidden" name="_csrf" value={{csrfToken}} />
 </form>
 
 <button id="submit-button" form="petition-form">Submit</button>
