--- a/views/petition.handlebars
+++ b/views/petition.handlebars
@@ -1,12 +1,12 @@
 <h1>We want Half-Life λ&sup3; now!</h1>
 <form id="petition-form" method="POST" onsubmit="">
-    <div id="first-container">
+    <div id="first-container" class="input-container">
         <label for="first">First Name</label>
-        <input id="first" type="text" name="first" />
+        <input id="first" type="text" name="first" value={{first}} />
     </div>
-    <div id="last-container">
+    <div id="last-container" class="input-container">
         <label for="last">Last Name</label>
-        <input id="last" type="text" name="last" />
+        <input id="last" type="text" name="last" value={{last}} />
     </div>
     <div id="signature-container">
         <label for="signature">Your Signature</label>
