--- a/views/petition.handlebars
+++ b/views/petition.handlebars
@@ -1,5 +1,5 @@
 <h1>We want Half-Life λ&sup3; now!</h1>
-<form id="petition-form" method="POST" onsubmit="">
+<form id="petition-form" method="POST">
     {{!-- <div id="first-container" class="input-container">
         <label for="first">First Name</label>
         <input id="first" type="text" name="first" value={{first}} />
@@ -8,9 +8,9 @@
         <label for="last">Last Name</label>
         <input id="last" type="text" name="last" value={{last}} />
     </div> --}}
-    {{!-- <div>
+    <div>
         <h2>{{first}} {{last}}</h2>
-    </div> --}}
+    </div>
     <div id="signature-container">
         <label for="signature">Your Signature</label>
         <input id="signature" type="hidden" name="signature" />
