fully functional - secure URLs left to implement

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,5 +1,5 @@
 <h1>Login</h1>
-<form id="login-form" method="POST">
+<form id="login-form" class="required-form" method="POST">
     <div id="email-container" class="input-container">
         <label for="email">Email</label>
         <input id="email" type="email" name="email" />
@@ -12,4 +12,4 @@
 </form>
 
 <h3>Don't have an account? Please sign up <a href="/register">here</a>.</h3>
-<button id="submit-button" form="login-form">Login</button>
+<button class="button" form="login-form">Login</button>
