--- a/views/signers.handlebars
+++ b/views/signers.handlebars
@@ -1,7 +1,19 @@
 <div id="signers">
     <ul>
         {{#each signers}}
-            <li>{{this.first}} {{this.last}}</li>
+            <li>
+                {{#if this.url}}
+                    <a href="//{{this.url}}" target="_blank">
+                        {{this.first}}
+                        {{this.last}}
+                    </a>
+                {{else}}
+                    {{this.first}}
+                    {{this.last}}
+                {{/if}}
+                {{this.age}}
+                <a href="/signers/{{this.city}}">{{this.city}}</a>
+            </li>
         {{/each}}
         <li id="crowbar">Here's a Crowbar</li>
     </ul>
