--- a/public/style.css
+++ b/public/style.css
@@ -96,15 +96,24 @@ input {
     border-bottom-right-radius: 5px;
     align-self: flex-end;
     margin-right: 15px;
-    font-style: italic;
+    font-size: 13px;
+    font-family: "Special Elite", serif;
 }
 
-#submit-button {
+.button {
+    font-family: "Special Elite", serif;
     font-size: 20px;
     width: 180px;
     height: 50px;
     background-color: white;
     border-radius: 10px;
+}
+
+a.button {
+    text-decoration: none;
+    cursor: default;
+    color: black;
+    padding: 13px 65px;
 }
 
 #thanks > p {
@@ -154,4 +163,14 @@ input {
 #crowbar {
     visibility: hidden;
     margin-top: 45vh;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+input[type="number"] {
+    -moz-appearance: textfield;
 }
