--- a/views/petition.handlebars
+++ b/views/petition.handlebars
@@ -1,13 +1,5 @@
 <h1>We want Half-Life λ&sup3; now!</h1>
-<form id="petition-form" method="POST">
-    {{!-- <div id="first-container" class="input-container">
-        <label for="first">First Name</label>
-        <input id="first" type="text" name="first" value={{first}} />
-    </div>
-    <div id="last-container" class="input-container">
-        <label for="last">Last Name</label>
-        <input id="last" type="text" name="last" value={{last}} />
-    </div> --}}
+<form id="petition-form" class="required-form" method="POST">
     <div>
         <h2>{{first}} {{last}}</h2>
     </div>
@@ -22,4 +14,4 @@
     <input type="hidden" name="_csrf" value={{csrfToken}} />
 </form>
 
-<button id="submit-button" form="petition-form">Submit</button>
+<button class="button" form="petition-form">Submit</button>
