--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,10 +9,14 @@
             href="https://fonts.googleapis.com/css?family=Special+Elite"
         />
         <link rel="stylesheet" href="/style.css" />
+        <link href="/assets/favicon.ico" rel="icon" type="image/x-icon" />
     </head>
     <body>
         {{#if id}}
             <a href="/logout"><img id="logout-button" alt="logout" /></a>
+            <a href="/edit-profile">
+                <img id="edit-profile-button" alt="edit profile" />
+            </a>
         {{/if}}
         <img id="gordon" />
         <main>
