--- a/views/edit_profile.handlebars
+++ b/views/edit_profile.handlebars
@@ -3,15 +3,15 @@
 <form id="edit-form" method="POST">
     <div id="first-container" class="input-container">
         <label for="first">First Name</label>
-        <input id="first" type="text" name="first" value={{first}} />
+        <input id="first" type="text" name="first" value="{{first}}" />
     </div>
     <div id="last-container" class="input-container">
         <label for="last">Last Name</label>
-        <input id="last" type="text" name="last" value={{last}} />
+        <input id="last" type="text" name="last" value="{{last}}" />
     </div>
     <div id="email-container" class="input-container">
         <label for="email">Email</label>
-        <input id="email" type="email" name="email" value={{email}} />
+        <input id="email" type="email" name="email" value="{{email}}" />
     </div>
     <div id="password-container" class="input-container">
         <label for="password">Password</label>
@@ -19,17 +19,17 @@
     </div>
     <div id="age-container" class="input-container">
         <label for="age">Age</label>
-        <input id="age" type="number" name="age" min="13" value={{age}} />
+        <input id="age" type="number" name="age" min="13" value="{{age}}" />
     </div>
     <div id="city-container" class="input-container">
         <label for="city">City</label>
-        <input id="city" type="text" name="city" value={{city}} />
+        <input id="city" type="text" name="city" value="{{city}}" />
     </div>
     <div id="web-container" class="input-container">
         <label for="url">URL</label>
-        <input id="url" type="text" name="url" value={{url}} />
+        <input id="url" type="text" name="url" value="{{url}}" />
     </div>
-    <input type="hidden" name="_csrf" value={{csrfToken}} />
+    <input type="hidden" name="_csrf" value="{{csrfToken}}" />
 </form>
 
 <button class="button" form="edit-form">Save</button>
