--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,18 +1,17 @@
-<h1>Login</h1>
+<h1>We want Half-Life λ&sup3; now!</h1>
 {{#if wrong}}
     <h4 class="error-message">Something went wrong. Please try again.</h4>
 {{/if}}
 <form id="login-form" class="required-form" method="POST">
     <div id="email-container" class="input-container">
         <label for="email">Email</label>
-        <input id="email" type="email" name="email" />
+        <input id="email" type="email" name="email" value="{{email}}" />
     </div>
     <div id="password-container" class="input-container">
         <label for="password">Password</label>
         <input id="password" type="password" name="password" />
     </div>
-    <input type="hidden" name="_csrf" value={{csrfToken}} />
+    <input type="hidden" name="_csrf" value="{{csrfToken}}" />
 </form>
-
-<h3>Don't have an account? Please sign up <a href="/register">here</a>.</h3>
 <button class="button" form="login-form">Login</button>
+<h3>Don't have an account? Please sign up <a href="/register">here</a>.</h3>
