--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -16,7 +16,7 @@
         <label for="password">Password</label>
         <input id="password" type="password" name="password" />
     </div>
-    <input type="hidden" name="_csrf" value={{csrfToken}} />
+    <input type="hidden" name="_csrf" value="{{csrfToken}}" />
 </form>
 
 <button class="button" form="register-form">Register</button>
