--- a/public/style.css
+++ b/public/style.css
@@ -70,7 +70,8 @@ form {
     justify-content: center;
     gap: 10px;
     height: 300px;
-    padding: 30px 90px;
+    width: 400px;
+    padding: 10px 30px;
     background-color: rgba(0, 0, 0, 0.356);
     border-radius: 30px;
     color: white;
@@ -85,9 +86,7 @@ input {
 }
 
 .input-container {
-    margin-left: 20px;
-    align-self: flex-start;
-    width: 100%;
+    width: 60%;
     display: flex;
     justify-content: space-between;
     line-height: 25px;
@@ -201,7 +200,10 @@ input[type="number"] {
     -moz-appearance: textfield;
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 900px) {
+}
+
+@media screen and (max-width: 768px) {
     h1 {
         padding: 25px 0;
         margin: 0 100px;
@@ -223,11 +225,6 @@ input[type="number"] {
         height: 150px;
     }
 
-    form {
-        width: 30%;
-        height: 200px;
-    }
-
     #edit-form {
         height: 400px;
     }
@@ -237,7 +234,8 @@ input[type="number"] {
     }
 
     input {
-        width: 100%;
+        width: 80%;
+        height: 30px;
     }
 
     .input-container {
@@ -294,5 +292,122 @@ input[type="number"] {
         text-align: center;
         white-space: normal;
         width: 200px;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    h1 {
+        padding: 25px 0;
+        margin: 0;
+        margin-top: 25px;
+    }
+
+    h2 {
+        margin: 0;
+        text-align: center;
+        width: 300px;
+    }
+
+    h3 {
+        text-align: center;
+        width: 60%;
+    }
+
+    #gordon {
+        width: 150px;
+        height: 150px;
+    }
+
+    form {
+        margin-top: 50px;
+        width: 50%;
+        height: 200px;
+    }
+
+    #edit-form {
+        height: 400px;
+    }
+
+    #petition-form {
+        height: 360px;
+    }
+
+    input {
+        width: 100%;
+        height: 30px;
+    }
+
+    .input-container {
+        width: 80%;
+        text-align: center;
+        display: inline-block;
+        margin: 0;
+    }
+
+    #signature-container {
+        margin: 0;
+        text-align: center;
+    }
+
+    #signature-canvas {
+        width: 250px;
+        height: 250px;
+    }
+
+    .button {
+        position: absolute;
+        bottom: 75px;
+        left: 50%;
+        transform: translateX(-50%);
+    }
+
+    #skip-button {
+        margin-top: 130px;
+    }
+
+    #skip-button > a {
+        position: initial;
+    }
+
+    #thanks {
+        text-align: center;
+    }
+
+    #user-signature {
+        margin-top: 50px;
+        height: 300px;
+        display: flex;
+        align-items: center;
+    }
+
+    #user-signature > img {
+        height: 200px;
+    }
+
+    #signers {
+        width: 90%;
+    }
+
+    #signers > ul > li {
+        text-align: center;
+        white-space: normal;
+        width: 200px;
+    }
+}
+
+@media screen and (max-width: 485px) {
+    h1 {
+        width: 90%;
+    }
+
+    form {
+        width: 60%;
+    }
+}
+
+@media screen and (max-width: 440px) {
+    #gordon {
+        width: 90px;
+        height: 90px;
     }
 }
