--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -14,4 +14,7 @@
     <input type="hidden" name="_csrf" value="{{csrfToken}}" />
 </form>
 <button class="button" form="login-form">Login</button>
-<h3>Don't have an account? Please sign up <a href="/register">here</a>.</h3>
+<h3 class="register-login">
+    Don't have an account? Please sign up
+    <a href="/register">here</a>.
+</h3>
