--- a/public/style.css
+++ b/public/style.css
@@ -14,6 +14,7 @@ h1 {
 }
 
 h3 {
+    text-align: center;
     color: white;
 }
 
@@ -397,5 +398,11 @@ input[type="number"] {
     #gordon {
         width: 90px;
         height: 90px;
+    }
+}
+
+@media (pointer: none), (pointer: coarse) {
+    #gordon {
+        visibility: hidden;
     }
 }
