css restructure & bug fixes

--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -15,7 +15,5 @@
     <input type="hidden" name="_csrf" value="{{csrfToken}}" />
 </form>
 
-<div id="skip-button">
-    <a class="button" href="/petition">Skip</a>
-</div>
-<button class="button" form="info-form">Submit</button>
+<button class="button" form="info-form" type="reset">Skip</button>
+<button class="button" form="info-form" type="submit">Submit</button>
