--- a/views/signers.handlebars
+++ b/views/signers.handlebars
@@ -15,7 +15,7 @@
                 <a href="/signers/{{this.city}}">{{this.city}}</a>
             </li>
         {{/each}}
-        <li id="crowbar">Here's a Crowbar</li>
+        <li id="crowbar" class="off">Here's a Crowbar</li>
     </ul>
     <h3>Thank you!</h3>
 </div>
