--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,7 +8,8 @@
             rel="stylesheet"
             href="https://fonts.googleapis.com/css?family=Special+Elite"
         />
-        <link rel="stylesheet" href="/style.css" />
+        <link rel="stylesheet" href="/styles2.css" />
+        <link rel="stylesheet" href="/css/{{css}}" />
         <link href="/assets/favicon.ico" rel="icon" type="image/x-icon" />
     </head>
     <body>
@@ -26,7 +27,7 @@
     <script
         src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"
     ></script>
-    <script src="/form.js"></script>
-    <script src="/petition.js"></script>
-    <script src="/signersTicker.js"></script>
+    <script src="/js/form.js"></script>
+    <script src="/js/petition.js"></script>
+    <script src="/js/signers.js"></script>
 </html>
