--- a/public/css/petition.css
+++ b/public/css/petition.css
@@ -52,3 +52,13 @@ form {
     left: 50%;
     transform: translateX(-50%);
 }
+
+@media screen and (max-width: 600px) {
+    form {
+        width: 300px;
+    }
+
+    .input-container {
+        width: 80%;
+    }
+}
