--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,7 +8,7 @@
             rel="stylesheet"
             href="https://fonts.googleapis.com/css?family=Special+Elite"
         />
-        <link rel="stylesheet" href="/styles2.css" />
+        <link rel="stylesheet" href="/styles.css" />
         <link rel="stylesheet" href="/css/{{css}}" />
         <link href="/assets/favicon.ico" rel="icon" type="image/x-icon" />
     </head>
@@ -19,7 +19,7 @@
                 <img id="edit-profile-button" alt="edit profile" />
             </a>
         {{/if}}
-        <img id="gordon" />
+        <img id="gordon" alt="Gordon Freeman" />
         <main>
             {{{body}}}
         </main>
