--- a/public/css/login.css
+++ b/public/css/login.css
@@ -51,3 +51,25 @@ input {
 h3 > a {
     color: darkorange;
 }
+
+@media screen and (min-width: 900px) {
+}
+
+@media screen and (max-width: 768px) {
+}
+
+@media screen and (max-width: 600px) {
+    form {
+        width: 300px;
+    }
+
+    .input-container {
+        width: 80%;
+    }
+}
+
+@media screen and (max-width: 485px) {
+}
+
+@media screen and (max-width: 440px) {
+}
