--- a/public/styles.css
+++ b/public/styles.css
@@ -73,6 +73,8 @@ input::-webkit-inner-spin-button {
 
 input[type="number"] {
     -moz-appearance: textfield;
+    -webkit-appearance: textfield;
+    appearance: textfield;
 }
 
 @media screen and (max-width: 900px) {
