--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -16,6 +16,6 @@
 </form>
 
 <div id="skip-submit-buttons">
-    <button class="button" form="info-form" type="reset">Skip</button>
+    <a class="button" href="/petition">Skip</a>
     <button class="button" form="info-form" type="submit">Submit</button>
 </div>
