--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -18,6 +18,8 @@
     </div>
     <input type="hidden" name="_csrf" value="{{csrfToken}}" />
 </form>
-<h3 class="register-login">Already have an account? Login
-    <a href="/login">here</a>.</h3>
 <button class="button" form="register-form">Register</button>
+<h3 class="register-login">
+    Already have an account? Login
+    <a href="/login">here</a>.
+</h3>
