--- a/views/signers.handlebars
+++ b/views/signers.handlebars
@@ -1,7 +1,7 @@
 <div id="signers">
     <ul>
         {{#each signers}}
-            <li>
+            <li class="off">
                 {{#if this.url}}
                     <a href="//{{this.url}}" target="_blank">
                         {{this.first}}
