mobile friendly omw2

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,4 +1,4 @@
-<h1>We want Half-Life λ&sup3; now!</h1>
+<h1>We want Half-Life 3 now!</h1>
 {{#if wrong}}
     <h4 class="error-message">Something went wrong. Please try again.</h4>
 {{/if}}
