mobile friendly omw4

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -18,7 +18,8 @@
                 <img id="edit-profile-button" alt="edit profile" />
             </a>
         {{/if}}
-        <img id="gordon" alt="Gordon Freeman" />
+        <img id="gordon" src="/assets/gordon.png" alt="Gordon Freeman" />
+        <img id="logo" src="/assets/logo.png" alt="Half Life Logo" />
         <main>
             {{{body}}}
         </main>
