--- a/public/styles.css
+++ b/public/styles.css
@@ -4,6 +4,7 @@ body {
     height: 100vh;
     background-color: black;
     background-image: url("./assets/city17.jpg");
+    background-repeat: no-repeat;
     background-size: cover;
     font-family: "Special Elite", serif;
 }
@@ -37,12 +38,19 @@ h3 {
 }
 
 #gordon {
-    content: url("/assets/gordon.png");
     position: absolute;
     width: 200px;
     height: 200px;
     bottom: 0;
     right: 0;
+}
+
+#logo {
+    position: absolute;
+    width: 60px;
+    height: 40px;
+    top: 0;
+    left: 0;
 }
 
 main {
@@ -81,197 +89,6 @@ input[type="number"] {
         background-position: center;
     }
 }
-
-/*
-@media screen and (max-width: 768px) {
-    h1 {
-        padding: 25px 0;
-        margin-top: 25px;
-    }
-
-    h2 {
-        margin: 0;
-        text-align: center;
-        width: 300px;
-    }
-
-    #register-login {
-        text-align: center;
-        width: 60%;
-    }
-
-    #gordon {
-        width: 150px;
-        height: 150px;
-    }
-
-    #edit-form {
-        height: 400px;
-    }
-
-    #petition-form {
-        height: 360px;
-    }
-
-    input {
-        height: 30px;
-    }
-
-    .input-container {
-        line-height: 30px;
-    }
-
-    #signature-container {
-        margin: 0;
-        text-align: center;
-    }
-
-    #signature-canvas {
-        width: 250px;
-        height: 250px;
-    }
-
-    #skip-button {
-        margin-top: 130px;
-    }
-
-    #skip-button > a {
-        position: initial;
-    }
-
-    #thanks {
-        text-align: center;
-    }
-
-    #user-signature {
-        margin-top: 50px;
-        height: 300px;
-        display: flex;
-        align-items: center;
-    }
-
-    #user-signature > img {
-        height: 200px;
-    }
-
-    #signers > ul > li {
-        text-align: center;
-        white-space: normal;
-        width: 200px;
-    }
-}
-
-@media screen and (max-width: 600px) {
-    h1 {
-        margin: 0;
-    }
-
-    h2 {
-        margin: 0;
-        text-align: center;
-        width: 300px;
-    }
-
-    #register-login {
-        text-align: center;
-        width: 60%;
-    }
-
-    #gordon {
-        width: 150px;
-        height: 150px;
-    }
-
-    form {
-        margin-top: 50px;
-        width: 50%;
-    }
-
-    #edit-form {
-        margin-top: -25px;
-        height: 500px;
-    }
-
-    #petition-form {
-        height: 360px;
-    }
-
-    input {
-        width: 100%;
-        height: 30px;
-    }
-
-    .input-container {
-        width: 80%;
-        text-align: center;
-        display: inline-block;
-        margin: 0;
-    }
-
-    #signature-container {
-        margin: 0;
-        text-align: center;
-    }
-
-    #signature-canvas {
-        width: 250px;
-        height: 250px;
-    }
-
-    .button {
-        position: absolute;
-        bottom: 75px;
-        left: 50%;
-        transform: translateX(-50%);
-    }
-
-    #skip-button {
-        margin-top: 130px;
-    }
-
-    #skip-button > a {
-        position: initial;
-    }
-
-    #thanks {
-        text-align: center;
-    }
-
-    #user-signature {
-        margin-top: 50px;
-        height: 300px;
-        display: flex;
-        align-items: center;
-    }
-
-    #user-signature > img {
-        height: 200px;
-    }
-
-    #signers > ul > li {
-        text-align: center;
-        white-space: normal;
-        width: 200px;
-    }
-}
-
-@media screen and (max-width: 485px) {
-    h1 {
-        width: 90%;
-    }
-
-    form {
-        height: 270px;
-        margin-top: 50px;
-    }
-}
-
-@media screen and (max-width: 440px) {
-    #gordon {
-        width: 90px;
-        height: 90px;
-    }
-}*/
 
 @media (pointer: none), (pointer: coarse) {
     #gordon {
