--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,8 +7,10 @@
             rel="stylesheet"
             href="https://fonts.googleapis.com/css?family=Special+Elite"
         />
-        <link rel="stylesheet" href="/styles.css" />
-        <link rel="stylesheet" href="/css/{{css}}" />
+        <link rel="stylesheet" href="/css/styles.css" />
+        <link rel="stylesheet" href="/css/forms.css" />
+        <link rel="stylesheet" href="/css/signature-canvas-thanks.css" />
+        <link rel="stylesheet" href="/css/signers-page.css" />
         <link href="/assets/favicon.ico" rel="icon" type="image/x-icon" />
     </head>
     <body>
