--- a/views/signers.handlebars
+++ b/views/signers.handlebars
@@ -8,10 +8,9 @@
                         {{this.last}}
                     </a>
                 {{else}}
-                    {{this.first}}
-                    {{this.last}}
+                    <p>{{this.first}} {{this.last}}</p>
                 {{/if}}
-                {{this.age}}
+                <p>{{this.age}}</p>
                 <a href="/signers/{{this.city}}">{{this.city}}</a>
             </li>
         {{/each}}
