--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -1,4 +1,7 @@
 <h1>Register</h1>
+{{#if wrong}}
+    <h4 class="error-message">Something went wrong. Please try again.</h4>
+{{/if}}
 <form id="register-form" class="required-form" method="POST">
     <div id="first-container" class="input-container">
         <label for="first">First Name</label>
